Made sublist more versatile